Обновление. Новое решение

--- a/HomeWork_1/index.html
+++ b/HomeWork_1/index.html
@@ -19,7 +19,7 @@
 			<li><span>Усидчивый</span></li>
 			<li><span>Трудолюбивый</span></li>
 			<li><span>Отзывчивый</span></li>
-			<li><span>Лоялен к критике</span></li>
+			<li><span>Лоялен к критике</span></li>5
 			<li><span>Люблю ПрОгРаМмИрОвАтЬ :)</span></li>
 		</ul>
 	</div>
